--- a/_layouts/front-old.html
+++ b/_layouts/front-old.html
@@ -5,8 +5,11 @@
 
 <body id="page-top">
   {% include nav.html %}
-  {% include home.html %}
-  {% include join-us.html %}
+  {% include header.html %}
+  {% include call-to-action.html %}
+  {% include services.html %}
+  {% include portfolio.html %}
+  {% include aside.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
