header and nav bar contents

--- a/_includes/old-headers/header.html
+++ b/_includes/old-headers/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>College for All at Temple University</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <p>The students of Temple University are organizing a tuition freeze, and we need your help to make it happen.</p>
+            <a href="#join-us" class="btn btn-primary btn-xl page-scroll">Get Involved</a>
         </div>
     </div>
 </header>
