renamed join us

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,7 +6,8 @@
 <body id="page-top">
   {% include nav.html %}
   {% include home.html %}
-  {% include join-us.html %}
+  {% include platform.html %}
+  {% include join.html %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
