--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,6 +15,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
+                  <a class="page-scroll" href="#demands">Our Demands</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#join">Join Us</a>
                 </li>
                 <li>
