--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,7 +6,7 @@
 <body id="page-top">
   {% include nav.html %}
   {% include home.html %}
-  {% include platform.html %}
+  {% include demands.html %}
   {% include join.html %}
   {% include contact.html %}
   {% include scripts.html %}
