--- a/_includes/demands.html
+++ b/_includes/demands.html
@@ -18,23 +18,16 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-dollar wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fa fa-4x fa-home wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Livable Wages</h3>
                     <p class="text-muted">$15 minimum wage for all employees of Temple University</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>TODO</h3>
-                    <p class="text-muted">TODO</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>TODO</h3>
-                    <p class="text-muted">TODO</p>
+                    <i class="fa fa-4x fa-dollar wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Repeal RCM Budget Structure</h3>
+                    <p class="text-muted">Temple's new budget structure is hurting our colleges and schools</p>
                 </div>
             </div>
         </div>
