--- a/_includes/home.html
+++ b/_includes/home.html
@@ -4,7 +4,7 @@
             <h1>College for All at Temple University</h1>
             <hr>
             <p>The students of Temple University are organizing a tuition freeze, and we need your help to make it happen.</p>
-            <a href="#join-us" class="btn btn-primary btn-xl page-scroll">Get Involved</a>
+            <a href="#join" class="btn btn-primary btn-xl page-scroll">Get Involved</a>
         </div>
     </div>
 </header>
