--- a/_includes/join.html
+++ b/_includes/join.html
@@ -1,3 +1,4 @@
+<section id="join">
   <aside class="bg-dark">
       <div class="container text-center">
           <h2>Join the movement for a fairer, more affordable Temple</h2>
@@ -5,3 +6,4 @@
           <a href="google.com" class="btn btn-default btn-xl wow tada">Join us!</a>
       </div>
   </aside>
+</section>
