Join us button now links to a google form

--- a/_includes/join.html
+++ b/_includes/join.html
@@ -3,7 +3,7 @@
       <div class="container text-center">
           <h2>Join the movement for a fairer, more affordable Temple</h2>
           <!--TODO: replace google with a google sheets form -->
-          <a href="google.com" class="btn btn-default btn-xl wow tada">Join us!</a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfVb-cmAlU5Z79b4wMcYB3-TlAsvm1sl5NsHNkhpsYE557v2w/viewform?usp=sf_link" class="btn btn-default btn-xl wow tada">Join us!</a>
       </div>
   </aside>
 </section>
