--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>College for All at Temple University</h1>
+            <h1>College For All at Temple University</h1>
             <hr>
             <p>The students of Temple University are organizing a tuition freeze, and we need your help to make it happen.</p>
             <a href="#join" class="btn btn-primary btn-xl page-scroll">Get Involved</a>
