added blank faq

--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,6 +7,7 @@
   {% include nav.html %}
   {% include home.html %}
   {% include demands.html %}
+  {% include faq.html %}
   {% include join.html %}
   {% include contact.html %}
   {% include scripts.html %}
