--- a/_includes/demands.html
+++ b/_includes/demands.html
@@ -26,8 +26,8 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-dollar wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Repeal RCM</h3>
-                    <p class="text-muted">Temple's new budget structure is hurting our colleges and schools</p>
+                    <h3>Repeal Responsibility Center Management</h3>
+                    <p class="text-muted">RCM denies our colleges and schools necessary, equitable allocations</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
