added instagram link and changed wording in demands

--- a/_includes/demands.html
+++ b/_includes/demands.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary"></i>
                     <h3>Tuition Freeze</h3>
-                    <p class="text-muted">No increases in tuition for at least five years</p>
+                    <p class="text-muted">Freeze increases in tuition for the next five years</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -27,7 +27,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-dollar wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Repeal Responsibility Center Management</h3>
-                    <p class="text-muted">RCM denies our colleges and schools necessary, equitable allocations</p>
+                    <p class="text-muted">RCM denies our colleges and schools necessary, equitable allocations and needs to be repealed</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
