--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -12,6 +12,12 @@
                 <p>{{ site.twitter_username }}</p>
             </a>
         </div>
+        <div class="col-lg-2 col-lg-offset-2 text-center">
+            <a href="https://instagram.com/{{ site.instagram_username }}">
+                <i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{ site.instagram_username }}</p>
+            </a>
+        </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
             <a href="mailto:{{ site.email }}">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
