add image to petition

--- a/_includes/petition.html
+++ b/_includes/petition.html
@@ -1,6 +1,7 @@
 <section id="petition">
       <div class="container text-center">
           <h2>Sign Our Petition</h2>
+          <img src="https://collegeforalltemple.github.io/img/petition.png" alt="Petition" />
           <p>Support the cause by signing our petition on Change.org.  We need 100 signatures to reach our goal.</p>
           <a class="btn btn-primary" href="https://www.change.org/p/president-of-temple-university-richard-englert-temple-university-college-for-all">Sign Now</a>
       </div>
