add petition to scroll

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,6 +18,9 @@
                   <a class="page-scroll" href="#demands">Our Demands</a>
                 </li>
                 <li>
+                  <a class="page-scroll" href="#petition">Petition</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#join">Join Us</a>
                 </li>
                 <li>
